[package]
name = "dmidecode-rs"
version = "0.1.0"
authors = ["Jeffrey R. Gerber <jeffreygerber@gmail.com>", "Juan Zuluaga <juzuluag@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dmidecode"
path = "src/main.rs"

[dependencies]
structopt = { version = "0.3", default-features = true }
smbios-lib = "0.7.3"
enum-iterator = "0.6.0"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
tempfile = "3.2.0"