[package]
name = "dmidecode-rs"
version = "0.2.2"
authors = ["Jeffrey R. Gerber <jeffreygerber@gmail.com>", "Juan Zuluaga <juzuluag@hotmail.com>"]
license-file = "LICENSE"
edition = "2021"
description = "dmidecode is a tool to report SMBIOS table content in human readable format."
homepage = "https://github.com/jrgerber/dmidecode-rs"
repository = "https://github.com/jrgerber/dmidecode-rs"
readme = "README.md"
keywords = ["bios", "smbios", "dmtf", "dmi", "dmidecode"]
categories = ["hardware-support"]
exclude = [
    ".devcontainer/*",
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dmidecode"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
enum-iterator = "1.4.0"
serde_json = "1.0"
smbios-lib = "0.9.1"
structopt = { version = "0.3", default-features = true }

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.2.0"
