[package]
name = "dmidecode-rs"
version = "0.2.3"
authors = ["Jeffrey R. Gerber <jeffreygerber@gmail.com>", "Juan Zuluaga <juzuluag@hotmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "dmidecode is a tool to report SMBIOS table content in human readable format."
homepage = "https://github.com/jrgerber/dmidecode-rs"
repository = "https://github.com/jrgerber/dmidecode-rs"
readme = "README.md"
keywords = ["bios", "smbios", "dmtf", "dmi", "dmidecode"]
categories = ["hardware-support"]
exclude = [
    ".devcontainer/*",
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dmidecode"
path = "src/main.rs"

[dependencies]
structopt = { version = "~0.3", default-features = true }
smbios-lib = "~0.9"
enum-iterator = "~2.1"
serde_json = "~1.0"

[dev-dependencies]
assert_cmd = "~2.0"
predicates = "~3.0"
tempfile = "~3.10"
